# tinydhcpd

./: .gitignore  LICENSE  README.md  example.conf  meson.build  meson_options.txt  tinydhcpd@.service.in
examples/: example.conf
src/: bytemanip.cpp  bytemanip.hpp  configuration.cpp  configuration.hpp  daemon.cpp  daemon.hpp  datagram.cpp  datagram.hpp  epoll.hpp  logger.cpp  logger.hpp  main.cpp  socket.cpp  socket.hpp  socket_observer.hpp  string-format.hpp  subnet_config.hpp  systemd_logger.hpp  systemd_logsink.hpp  utils.cpp  utils.hpp
src/log/: logger.cpp  logger.hpp  logsink.hpp  stdout_logsink.hpp  syslog_buffer.cpp  syslog_buffer.hpp  syslog_logsink.hpp  systemd_logsink.hpp
templates/: tinydhcpd@.service.in  version.hpp.in
tools/: check_if_musl.sh  getversion.sh
